# graph_loop_grain

./: LICENSE  Readme.md
include/algorithms/: GraphGrain.hpp  GraphLoop.hpp  GraphPlay.hpp  GraphPlayUtils.hpp
include/clients/: GraphGrainClient.hpp  GraphLoopClient.hpp  GraphPlayClient.hpp
max/: CMakeLists.txt
max/fluid.graphgrain_tilde/: CMakeLists.txt  fluid.graphgrain_tilde.cpp
max/fluid.graphloop_tilde/: CMakeLists.txt  fluid.graphloop_tilde.cpp
max/fluid.graphplay_tilde/: CMakeLists.txt  fluid.graphplay_tilde.cpp
max/help/: graphgrain_demo.maxhelp  graphloop_demo.maxhelp  graphmontage_demo.maxhelp
supercollider/: CMakeLists.txt
supercollider/Classes/: FluidGraphGrain.sc  FluidGraphLoop.sc  FluidGraphPlay.sc
supercollider/FluidGraphGrain/: CMakeLists.txt  FluidGraphGrain.cpp
supercollider/FluidGraphLoop/: FluidGraphLoop.cpp
supercollider/FluidGraphPlay/: CMakeLists.txt  FluidGraphPlay.cpp
supercollider/HelpSource/Classes/: FluidGraphGrain.schelp  FluidGraphLoop.schelp  FluidGraphPlay.schelp
